--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
 
     - name: Set env
       id: release
-      run: echo ::set-output name=RELEASE_VERSION::$(git describe --match "[0-9]*.[0-9]*.[0-9]*" --tags $(git rev-list --tags --max-count=1))
+      run: echo ::set-output name=RELEASE_VERSION::latest
 
     - 
       name: Publish to Registry
