--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,23 +11,18 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
-
+    -
+      uses: go-semantic-release/action@v1
+      id: semantic
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
     - 
       name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@3.04
+      if: steps.semrel.outputs.version != ''
       with:
         registry: ghcr.io
-        name: "ghcr.io/hazcod/sentinel2misp/sentinel2misp:latest"
+        name: "ghcr.io/hazcod/sentinel2misp/sentinel2misp:${{ steps.semantic.outputs.version }}"
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         tag_semver: true
-    - 
-      name: Create GitHub release
-      uses: actions/create-release@v1.1.4
-      with:
-          tag_name: latest
-          release_name: sentinel2misp
-          draft: false
-          prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
